Enable necessary JDK modules for tests
Signed-off-by: utzcoz <utzcoz@outlook.com>